feat: 학생/교수 실시간 입장 이벤트 분리 및 socket join 구조 개선 + 채팅 API수정
